# Shoot-em-up

./: .gitmodules  CMakeLists.txt  README.md  gun2d.h
data/: .directory
include/: config_stat.h
source/: main.cpp  ray2d_maybe.h
src/: Box2D.h  alien.h  aliensManager.h  box2d.h  bullet.h  bulletsManager.h  gameEntity.h  gl_widget.cpp  gl_widget.hpp  gun.h  gun.h.autosave  head_window.cpp  head_window.h  logger.h  main.cpp  main_window.cpp  main_window.h  main_window.hpp  obstacle.h  point2d.h  ray2d.h  ray2d_maybe.h  settingsWindow.h  space.h  string_sasha.h  textured_rect.cpp  textured_rect.hpp
src/game/: alien.h  aliensManager.h  bulletsManager.h  gameEntity.h  gun.h  logger.h  obstacle.h  obstaclesManager.h  singleton.h  space.h  stars.h
src/geometry/: ray2d.h
tests/: Alien2D_test.cpp  Alien_tests.cpp  Box2D_test.cpp  Bullet_test.cpp  Gun_test.cpp  Gun_test.cpp.autosave  Logger_test.cpp  Obstacle2D_test.cpp  Obstacle_test.cpp  Obstacle_test.cpp.autosave  Point2D_test.cpp  Point2D_test.cpp.autosave  Ray2D_test.cpp  Ray2D_test.cpp.autosave  Space_test.cpp  bullet2d_test.cpp  gun2d_test.cpp  test_ray.cpp
